Bugfix: Account field is visible

--- a/src/app/rule-list/rule-card/rule-card.component.scss
+++ b/src/app/rule-list/rule-card/rule-card.component.scss
@@ -27,7 +27,7 @@ button {
 }
 
 .gray {
-  background-color: rgb(12, 185, 0);
+  background-color: rgb(47, 129, 223);
   // background-color: rgb(180, 180, 180);
 }
 
